--- a/cursos.html
+++ b/cursos.html
@@ -151,8 +151,7 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="container">
-                    <div class="text-justify mx-auto mb-1 wow fadeInUp" data-wow-delay="0.1s"
-                        style="max-width: 500px;">
+                    <div class="text-justify mx-auto mb-1 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                         <div class="text-center">
                             <img class="img-fluid w-100" src="img/cursos_1.jpg">
                         </div>
@@ -213,67 +212,61 @@
                 <h4 class="text-left mb-3">- Aulas Livres</h4>
                 <p>Pintura intuitiva e Desenho e pintura de Mandalas</p>
             </div>
-
-
-
-
-            </div>
-        </div>
-                
-            <!-- Cursos End -->
-
             <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s">
-                <a class="btn btn-primary py-3 px-3" href="https://form.jotform.com/251193714240046">Clique aqui para
-                    mais
-                    informações</a>
+                <a class="btn btn-primary py-2 px-2" href="https://form.jotform.com/251193714240046">Clique aqui para
+                    mais informações</a>
             </div>
-
-            <!-- Footer Start -->
-            <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
-                <div class="container py-2">
-                    <div class="row g-5">
-                        <div class="col-lg-3 col-md-6">
-                            <h5 class="text-white mb-4">Get in touch</h5>
-                            <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
-                            <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
-                            <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
-                            <div class="d-flex pt-2">
-                                <a class="btn btn-outline-light btn-social"
-                                    href="https://www.instagram.com/atelier_colibri"><i
-                                        class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-light btn-social" href="mailto:artsoulcolibri@gmail.com" ai><i
-                                        class="fa fa-envelope"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="copyright">
-                        <div class="row">
-                            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                                &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
-                                Designed by <a class="border-bottom" href="index.html">Plus Works Services</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Footer End -->
-
-            <!-- Back to Top -->
-            <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
         </div>
 
-        <!-- JavaScript Libraries -->
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="lib/wow/wow.min.js"></script>
-        <script src="lib/easing/easing.min.js"></script>
-        <script src="lib/waypoints/waypoints.min.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+        <!-- Cursos End -->
 
-        <!-- Template Javascript -->
-        <script src="js/main.js"></script>
+
+
+        <!-- Footer Start -->
+        <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
+            <div class="container py-2">
+                <div class="row g-5">
+                    <div class="col-lg-3 col-md-6">
+                        <h5 class="text-white mb-4">Get in touch</h5>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
+                        <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
+                        <div class="d-flex pt-2">
+                            <a class="btn btn-outline-light btn-social"
+                                href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="mailto:artsoulcolibri@gmail.com" ai><i
+                                    class="fa fa-envelope"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="copyright">
+                    <div class="row">
+                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                            &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
+                            Designed by <a class="border-bottom" href="index.html">Plus Works Services</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Footer End -->
+
+        <!-- Back to Top -->
+        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    </div>
+
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
